@@ -1,3 +1,9 @@
+Mon May 17 18:48:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/ami4ccm/tests/DelReplyH/Sender/DelReplyH_Sender_exec.h:
+        * connectors/ami4ccm/tests/DelReplyH/Sender/DelReplyH_Sender_exec.cpp:
+          Override _add_ref and _remove_ref to track when these are called
+
 Mon May 17 18:14:28 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/ciao_tests.lst:
